--- a/home/index.html
+++ b/home/index.html
@@ -2,238 +2,414 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Matt Scianna</title>
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Cardo&family=Oswald&display=swap" rel="stylesheet" />
+
   <style>
-    body {
+    /* Reset */
+    * {
+      box-sizing: border-box;
       margin: 0;
-      font-family: 'Helvetica Neue', sans-serif;
-      background-color: white;
+      padding: 0;
     }
 
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 24px 16px;
-      position: fixed;
-      top: 0;
+    body {
+      font-family: 'Oswald', sans-serif;
+      background-color: #fff;
+      color: #111;
+    }
+
+    a {
+      color: inherit;
+      text-decoration: none;
+      font-weight: 600;
+      position: relative;
+      cursor: pointer;
+    }
+    /* Underline effect */
+    a.underline-effect::after {
+      content: "";
+      position: absolute;
+      width: 0;
+      height: 2px;
+      bottom: -3px;
+      left: 0;
+      background-color: #000;
+      transition: width 0.3s ease;
+    }
+    a.underline-effect:hover::after {
       width: 100%;
-      background-color: white;
-      z-index: 999;
     }
 
-    .logo-container {
+    /* Header */
+    header {
+      position: fixed;
+      top: 0; left: 0; right: 0;
+      height: 64px;
+      background: transparent;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0 32px;
+      z-index: 1000;
+      transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    }
+    header.scrolled {
+      background-color: #fff;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.12);
+    }
+
+    #logo {
+      font-family: 'Cardo', serif;
+      font-size: 28px;
+      font-weight: 700;
+      user-select: none;
+      color: #000;
       display: flex;
       align-items: center;
       gap: 10px;
       cursor: pointer;
+      text-decoration: none;
+    }
+    #logo img {
+      height: 38px;
+      display: block;
     }
 
-    .logo-text {
-      font-size: 22px;
-      font-weight: bold;
+    /* Desktop nav */
+    nav.desktop-nav {
+      display: flex;
+      gap: 30px;
+      font-family: 'Oswald', sans-serif;
+      font-weight: 600;
+      font-size: 16px;
+      text-transform: uppercase;
+    }
+
+    nav.desktop-nav a {
+      position: relative;
+    }
+
+    /* Policies dropdown */
+    .policies-container {
+      position: relative;
+    }
+    #policiesToggle {
+      cursor: pointer;
       user-select: none;
     }
-
-    .logo-image {
-      width: 26px;
-      height: auto;
-    }
-
-    .icon-btn {
-      display: flex;
-      align-items: center;
-      cursor: pointer;
-    }
-
-    .menu-toggle span {
-      display: block;
-      height: 3px;
-      width: 24px;
-      background: black;
-      margin: 4px 0;
-    }
-
-    .cart-toggle img {
-      width: 22px;
-      height: auto;
-    }
-
-    .cart-count {
-      font-size: 14px;
-      background: black;
-      color: white;
-      border-radius: 50%;
-      padding: 2px 6px;
+    #policiesToggle::after {
+      content: " ▼";
+      font-size: 12px;
       margin-left: 4px;
     }
-
-    .slider {
-      display: flex;
-      overflow: hidden;
-      width: 100%;
-      height: 300px;
-    }
-
-    .slide {
-      flex: 0 0 100%;
-      background-size: cover;
-      background-position: center;
-      transition: transform 0.4s ease-in-out;
-      filter: brightness(0); /* make black */
-    }
-
-    .arrow {
+    #policiesDropdown {
+      display: none;
       position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      width: 20px;
-      height: 20px;
-      border-top: 2px solid white;
-      border-right: 2px solid white;
-      cursor: pointer;
-      z-index: 10;
+      top: 100%;
+      left: 0;
+      background-color: white;
+      border: 1px solid #ddd;
+      min-width: 150px;
+      box-shadow: 0 6px 12px rgba(0,0,0,0.1);
+      z-index: 1100;
+    }
+    #policiesDropdown a {
+      display: block;
+      padding: 10px 16px;
+      font-size: 14px;
+      color: #111;
+      border-bottom: 1px solid #eee;
+    }
+    #policiesDropdown a:last-child {
+      border-bottom: none;
+    }
+    #policiesDropdown a:hover {
+      background-color: #f5f5f5;
     }
 
-    .arrow.left {
-      left: 20px;
-      transform: translateY(-50%) rotate(-135deg);
-    }
-
-    .arrow.right {
-      right: 20px;
-      transform: translateY(-50%) rotate(45deg);
-    }
-
-    .product-image-box {
-      width: 90vw;
-      max-width: 600px;
-      margin: 40px auto 8px auto;
+    /* Hamburger */
+    #hamburger {
+      display: none;
+      flex-direction: column;
+      gap: 5px;
+      width: 24px;
+      height: 18px;
       background: none;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      overflow: visible;
+      border: none;
       cursor: pointer;
+      padding: 0;
+      z-index: 1100;
+    }
+    #hamburger span {
+      display: block;
+      height: 3px;
+      background-color: #111;
+      border-radius: 2px;
     }
 
-    .jersey-img {
-      width: 100%;
-      height: auto;
-      object-fit: contain;
-      transition: transform 0.25s ease-in-out;
-      image-rendering: auto;
+    /* Sidebar */
+    #sidebar {
+      position: fixed;
+      top: 0;
+      left: -280px;
+      width: 280px;
+      height: 100vh;
+      background-color: #fff;
+      box-shadow: 2px 0 12px rgba(0,0,0,0.15);
+      padding: 64px 24px 24px 24px;
+      overflow-y: auto;
+      transition: left 0.3s ease;
+      z-index: 1200;
     }
-
-    .jersey-img:hover {
-      transform: scale(1.03);
+    #sidebar.open {
+      left: 0;
     }
-
-    .product-info {
-      text-align: center;
-      margin-bottom: 24px;
-      margin-top: 16px;
-      user-select: none;
+    #sidebar nav a {
+      display: block;
+      font-family: 'Oswald', sans-serif;
+      font-size: 18px;
+      padding: 14px 0;
+      border-bottom: 1px solid #eee;
+      font-weight: 600;
     }
-
-    .product-title {
-      font-weight: 700;
-      font-size: 22px;
-      margin-bottom: 4px;
-      cursor: pointer;
-      transition: border-bottom 0.2s ease;
-      user-select: none;
+    #sidebar nav a:hover {
+      text-decoration: underline;
     }
-
-    .product-title:hover {
-      border-bottom: 1.5px solid black;
+    #sidebar .policies-container {
+      margin-top: 32px;
     }
-
-    .product-color {
-      font-weight: 400;
+    #sidebar #policiesDropdown {
+      position: static;
+      border: none;
+      box-shadow: none;
+      background: none;
+      display: none;
+      padding-left: 14px;
+      margin-top: 8px;
+    }
+    #sidebar #policiesDropdown a {
+      border: none;
       font-size: 16px;
-      color: black;
-      margin-bottom: 4px;
+      padding: 8px 0;
+    }
+    #sidebar #policiesDropdown a:hover {
+      background: none;
+      text-decoration: underline;
     }
 
-    .product-price {
-      font-weight: 400;
-      font-size: 20px;
+    /* Carousel */
+    .carousel {
+      margin-top: 64px;
+      background-color: #111;
+      height: 180px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      font-family: 'Oswald', sans-serif;
+      font-weight: 700;
+      font-size: 28px;
+      letter-spacing: 0.1em;
+      user-select: none;
     }
-        .footer {
+
+    /* Main content */
+    main {
+      max-width: 980px;
+      margin: 32px auto 64px;
+      padding: 0 16px;
+    }
+
+    .product-header {
+      font-family: 'Oswald', sans-serif;
+      font-weight: 700;
+      font-size: 32px;
+      margin-bottom: 24px;
+      text-transform: uppercase;
+      letter-spacing: 0.1em;
+      user-select: none;
+    }
+
+    .products-grid {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 28px;
+      justify-content: center;
+    }
+    .product-card {
+      width: 280px;
+      border: 1px solid #ddd;
+      box-shadow: 0 0 6px rgba(0,0,0,0.05);
+      padding: 18px;
       text-align: center;
-      padding: 40px 16px 80px;
+      font-family: 'Oswald', sans-serif;
+      font-weight: 500;
+    }
+    .product-card img {
+      max-width: 100%;
+      height: auto;
+      margin-bottom: 12px;
+      user-select: none;
+    }
+    .product-color {
       font-size: 14px;
       color: #666;
+      margin-bottom: 8px;
+    }
+    .product-price {
+      font-size: 18px;
+      font-weight: 700;
+      color: #111;
     }
 
-    .spacer {
-      height: 90px;
+    /* Responsive */
+    @media (max-width: 768px) {
+      nav.desktop-nav {
+        display: none;
+      }
+      #hamburger {
+        display: flex;
+      }
     }
   </style>
 </head>
-
 <body>
   <header>
-    <div class="logo-container" onclick="reloadToTop()">
-      <img src="https://github.com/mattscianna/mattscianna/blob/main/logo.png?raw=true" alt="Logo" class="logo-image" />
-      <div class="logo-text">Matt Scianna</div>
-    </div>
+    <a href="#" id="logo" aria-label="Matt Scianna Homepage" title="Matt Scianna Homepage">
+      <!-- White logo by default -->
+      <img src="https://github.com/mattscianna/mattscianna/blob/main/logo-white.png?raw=true" alt="Matt Scianna Logo" id="logo-img" />
+      <span style="display:none;">Matt Scianna</span>
+    </a>
 
-    <div style="display: flex; align-items: center; gap: 16px;">
-      <div class="icon-btn menu-toggle" onclick="toggleMenu()">
-        <span></span>
-        <span></span>
-        <span></span>
+    <nav class="desktop-nav" role="navigation" aria-label="Primary Navigation">
+      <a href="#" class="underline-effect">Home</a>
+      <a href="#" class="underline-effect">Shop</a>
+      <a href="#" class="underline-effect">About</a>
+      <div class="policies-container">
+        <a href="#" id="policiesToggle" class="underline-effect" aria-haspopup="true" aria-expanded="false">Policies</a>
+        <div id="policiesDropdown" aria-hidden="true">
+          <a href="#">Shipping</a>
+          <a href="#">Returns</a>
+          <a href="#">Terms of Service</a>
+        </div>
       </div>
+      <a href="#" class="underline-effect">Contact</a>
+    </nav>
 
-      <div class="icon-btn cart-toggle">
-        <img src="https://cdn-icons-png.flaticon.com/512/3737/3737372.png" alt="Cart" />
-        <div class="cart-count">0</div>
-      </div>
-    </div>
+    <button id="hamburger" aria-label="Open Menu" aria-expanded="false" aria-controls="sidebar">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
   </header>
 
-  <div class="spacer"></div>
+  <aside id="sidebar" role="complementary" aria-label="Sidebar Navigation">
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Shop</a>
+      <a href="#">About</a>
+      <div class="policies-container">
+        <a href="#" id="sidebarPoliciesToggle" aria-haspopup="true" aria-expanded="false">Policies ▼</a>
+        <div id="sidebarPoliciesDropdown" aria-hidden="true">
+          <a href="#">Shipping</a>
+          <a href="#">Returns</a>
+          <a href="#">Terms of Service</a>
+        </div>
+      </div>
+      <a href="#">Contact</a>
+    </nav>
+  </aside>
 
-  <div class="product-image-box">
-    <img class="jersey-img" src="https://github.com/mattscianna/mattscianna/blob/main/IMG_1178.png?raw=true" alt="Jersey Front" />
-  </div>
-  <div class="product-info">
-    <div class="product-title">TWO-FIVE JERSEY</div>
-    <div class="product-color">RED</div>
-    <div class="product-price">$49.99 USD</div>
+  <div class="carousel" role="banner" aria-label="Two Five Jersey Carousel">
+    TWO-FIVE JERSEY
   </div>
 
-  <div class="product-image-box">
-    <img class="jersey-img" src="https://github.com/mattscianna/mattscianna/blob/main/IMG_1177.png?raw=true" alt="Jersey Back" />
-  </div>
-    <div class="product-info">
-    <div class="product-title">TWO-FIVE JERSEY</div>
-    <div class="product-color">WHITE</div>
-    <div class="product-price">$49.99 USD</div>
-  </div>
+  <main>
+    <!-- Top product: Red -->
+    <h1 class="product-header">TWO-FIVE JERSEY</h1>
+    <div class="products-grid">
+      <div class="product-card">
+        <img src="https://github.com/mattscianna/mattscianna/blob/main/IMG_1178.png?raw=true" alt="Red TWO-FIVE Jersey" />
+        <div class="product-color">Color: RED</div>
+        <div class="product-price">$49.99 USD</div>
+      </div>
+    </div>
 
-  <div class="footer">
-    © 2025 Matt Scianna. All rights reserved.
-  </div>
+    <!-- Bottom product: White -->
+    <h1 class="product-header" style="margin-top: 64px;">TWO-FIVE JERSEY</h1>
+    <div class="products-grid">
+      <div class="product-card">
+        <img src="https://github.com/mattscianna/mattscianna/blob/main/IMG_1193.png?raw=true" alt="White TWO-FIVE Jersey" />
+        <div class="product-color">Color: WHITE</div>
+        <div class="product-price">$49.99 USD</div>
+      </div>
+    </div>
+  </main>
 
   <script>
-    // Logo click reload and scroll to top after a short delay
-    function reloadToTop() {
-      location.reload();
-      setTimeout(() => {
-        window.scrollTo({ top: 0, behavior: 'auto' });
-      }, 100);
-    }
+    document.addEventListener('DOMContentLoaded', () => {
+      const logo = document.getElementById('logo');
+      const logoImg = document.getElementById('logo-img');
+      const header = document.querySelector('header');
+      const policiesToggle = document.getElementById('policiesToggle');
+      const policiesDropdown = document.getElementById('policiesDropdown');
+      const hamburger = document.getElementById('hamburger');
+      const sidebar = document.getElementById('sidebar');
 
-    // Menu toggle logic (example, expand if needed)
-    function toggleMenu() {
-      const menu = document.querySelector('header .menu-toggle');
-      menu.classList.toggle('open');
-      // Add sidebar open/close logic here if needed
-    }
+      const sidebarPoliciesToggle = document.getElementById('sidebarPoliciesToggle');
+      const sidebarPoliciesDropdown = document.getElementById('sidebarPoliciesDropdown');
+
+      // Logo click reload + delayed scroll top
+      logo.addEventListener('click', e => {
+        e.preventDefault();
+        window.location.reload();
+        setTimeout(() => {
+          window.scrollTo({ top: 0, behavior: 'auto' });
+        }, 700);
+      });
+
+      // Scroll event for header bg + logo image swap
+      window.addEventListener('scroll', () => {
+        if (window.scrollY > 80) {
+          header.classList.add('scrolled');
+          logoImg.src = "https://github.com/mattscianna/mattscianna/blob/main/logo-black.png?raw=true";
+          logo.style.fontFamily = "'Cardo', serif";
+        } else {
+          header.classList.remove('scrolled');
+          logoImg.src = "https://github.com/mattscianna/mattscianna/blob/main/logo-white.png?raw=true";
+          logo.style.fontFamily = "'Cardo', serif";
+        }
+      });
+
+      // Policies dropdown toggle desktop
+      policiesToggle.addEventListener('click', e => {
+        e.preventDefault();
+        const expanded = policiesToggle.getAttribute('aria-expanded') === 'true';
+        policiesToggle.setAttribute('aria-expanded', !expanded);
+        policiesDropdown.setAttribute('aria-hidden', expanded);
+        policiesDropdown.style.display = expanded ? 'none' : 'block';
+      });
+
+      // Hamburger toggle sidebar
+      hamburger.addEventListener('click', () => {
+        const expanded = hamburger.getAttribute('aria-expanded') === 'true';
+        hamburger.setAttribute('aria-expanded', !expanded);
+        sidebar.classList.toggle('open');
+      });
+
+      // Sidebar policies dropdown toggle
+      sidebarPoliciesToggle.addEventListener('click', e => {
+        e.preventDefault();
+        const expanded = sidebarPoliciesToggle.getAttribute('aria-expanded') === 'true';
+        sidebarPoliciesToggle.setAttribute('aria-expanded', !expanded);
+        sidebarPoliciesDropdown.setAttribute('aria-hidden', expanded);
+        sidebarPoliciesDropdown.style.display = expanded ? 'none' : 'block';
+      });
+    });
   </script>
 </body>
 </html>
