--- a/home/index.html
+++ b/home/index.html
@@ -40,10 +40,10 @@
       border-bottom: 1px solid #ccc;
     }
 
-    .logo-container {
+     .logo-container {
       position: absolute;
       left: 50%;
-      top: 56%; /* lowered from 50% */
+      top: 50%;
       transform: translate(-50%, -50%);
       display: flex;
       align-items: center;
