--- a/home/index.html
+++ b/home/index.html
@@ -25,7 +25,7 @@
       width: 100%;
     }
 
-    header {
+      header {
       position: fixed;
       top: 0;
       left: 0;
@@ -40,16 +40,13 @@
       border-bottom: 1px solid #ccc;
     }
 
-     .logo-container {
-      position: absolute;
-      left: 50%;
-      top: 56%;
-      transform: translate(-50%, -50%);
+      .logo-container {
       display: flex;
       align-items: center;
       height: 64px;
       cursor: pointer;
       user-select: none;
+      margin: 0 auto;
     }
     
 .logo-text { font-size: 24px; top: 53%; position: relative; }
