--- a/home/index.html
+++ b/home/index.html
@@ -25,7 +25,7 @@
       width: 100%;
     }
 
-      header {
+     header {
       position: fixed;
       top: 0;
       left: 0;
@@ -38,7 +38,7 @@
       background-color: white;
       z-index: 1200;
       border-bottom: 1px solid #ccc;
-    }
+  }
 
       .logo-container {
       display: flex;
@@ -47,6 +47,9 @@
       cursor: pointer;
       user-select: none;
       margin: 0 auto;
+      margin-top: -8px;    /* Nudge the logo up */
+      line-height: 1;      /* Remove extra vertical space */
+      font-size: 24px;     /* Adjust font size as needed */
     }
     
 .logo-text { font-size: 24px; top: 53%; position: relative; }
