--- a/home/index.html
+++ b/home/index.html
@@ -47,10 +47,10 @@
       cursor: pointer;
       user-select: none;
       margin: 0 auto;
-      margin-top: -8px;    /* Nudge the logo up */
-      line-height: 1;      /* Remove extra vertical space */
-      font-size: 24px;     /* Adjust font size as needed */
-    }
+      margin-top: -30px;  /* BIG nudge up — adjust as needed */
+      line-height: 1;
+      font-size: 24px;
+  }
     
 .logo-text { font-size: 24px; top: 53%; position: relative; }
 .scrolled .logo-text { display: none; }
