--- a/home/index.html
+++ b/home/index.html
@@ -47,7 +47,7 @@
       cursor: pointer;
       user-select: none;
       margin: 0 auto;
-      margin-top: -30px;  /* BIG nudge up — adjust as needed */
+      margin-top: -40px;  /* BIG nudge up — adjust as needed */
       line-height: 1;
       font-size: 24px;
   }
@@ -531,9 +531,9 @@
     <a href="#" class="policies-link arrow-closed" id="policiesLink" aria-expanded="false" aria-controls="policiesDropdown">POLICIES</a>
     <div id="policiesDropdown" class="policies-dropdown" role="region" aria-hidden="true">
       <!-- Dropdown items go here -->
-      <a href="/return-policy">Return Policy</a>
-      <a href="/shipping-policy">Shipping Policy</a>
-      <a href="/privacy-policy">Privacy Policy</a>
+      <a href="/return-policy">RETURN POLICY</a>
+      <a href="/shipping-policy">SHIPPING POLICY</a>
+      <a href="/privacy-policy">PRIVACY POLICY</a>
     </div>
   </nav>
 </nav>
