--- a/home/index.html
+++ b/home/index.html
@@ -47,7 +47,7 @@
       cursor: pointer;
       user-select: none;
       margin: 0 auto;
-      margin-top: -40px;  /* BIG nudge up — adjust as needed */
+      margin-top: -56px;
       line-height: 1;
       font-size: 24px;
   }
